fix lucmsilva anchor position on mobile by switching the head_links css

--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ a {
 }
 
 .head_links a {
-  position: relative;
+  position: sticky;
   display: inline-block;
   text-decoration: none;
   overflow: hidden;
